<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:context=".ItemProdutoActivity"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="3dp"
        android:background="#f4f1de">

    <TextView
            android:textColor="#776A6A"
            android:gravity="center_vertical"
            android:id="@+id/nomeProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produto"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:textColor="#776A6A"
            android:layout_gravity="center_horizontal"
            android:id="@+id/simboloPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simboloValor"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/precoProduto"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:textColor="#776A6A"
            android:layout_gravity="center_horizontal"
            android:id="@+id/precoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroValor"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>