<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/pdtDigitado"
            android:gravity="center_horizontal"
            android:layout_width="180dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:hint="@string/insira_o_produto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/prcDigitado"
            android:autofillHints=""
            android:inputType="text"/>

    <EditText
            android:id="@+id/prcDigitado"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:layout_width="180dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:hint="@string/insira_o_preco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pdtDigitado"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            android:autofillHints=""/>

    <Button
            android:id="@+id/btn"
            android:layout_width="200dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_produto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"
            app:layout_constraintTop_toBottomOf="@+id/prcDigitado"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_height="220dp"
            android:layout_width="220dp"
            app:layout_constraintWidth_percent="0.4"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/gagaha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>